trying to fix spacing between home and about sections on different size screens

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -283,7 +283,7 @@ main #home {
 }
 @media screen and (min-width: 501px) and (max-width: 767px) {
   #about {
-    margin-top: calc(100px);
+    margin-top: calc(150px);
   }
 
   #home {
